--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -2,8 +2,12 @@
   <div class="pokemon-grid">
     <div id="imageAndImageBtns" class="box"
          [ngStyle]="{'background-color':changeColor(pokemonColor)}">
-      <h1 id="infoTitle">{{pokemonName | titlecase}}</h1>
-      <img id="imageOfPokemon" alt="pokemon" src="{{pokemonImage}}" width="200" height="200"/>
+      <nav>
+        <a routerLink="/evolutions/?pokemonID={{pokemonID}}" style="text-decoration: none; color: black;">
+          <h1 id="infoTitle">{{pokemonName | titlecase}}</h1>
+        </a>
+      </nav>
+      <img id="imageOfPokemon" alt="pokemon" src="{{pokemonImage}}" width="250" height="250"/>
       <div id="photosDiv">
         <button id="defaultImgBtn" class="tab" (click)="showImage('default')">Show Default</button>
         <button id="shinyImgBtn" class="tab" (click)="showImage('shiny')">Show Shiny</button>
@@ -11,7 +15,7 @@
     </div>
     <div id="info" class="box"
          [ngStyle]="{'background-color':changeColor(pokemonColor)}">
-      <div style="display:inline-flex">
+      <div id="nameAndID" style="display:inline-flex">
         <h3 id="name">Name: {{pokemonName | titlecase}}</h3> &nbsp;&nbsp;&nbsp;&nbsp;
         <h3 id="idOfPokemon">ID: {{pokemonID}}</h3>
       </div>
