chain map complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <nav>
   <a routerLink="/search">
-    <img alt="pokedex" src="./assets/images/pokedexImage.jpg" title="Click here to search for a specific Pokemon">
+    <img alt="pokedex" src="./assets/images/pokedexImage.jpg"
+         title="Click here to search for a specific Pokemon"
+    >
   </a>
 </nav>
 <router-outlet></router-outlet>
