--- a/src/app/evolutions/evolutions.component.html
+++ b/src/app/evolutions/evolutions.component.html
@@ -8,21 +8,57 @@
 <br/>
 <div style="display:inline-flex; justify-content: center; width:100%; height:100%; ">
   <div class="box"
-       *ngFor="let ids of pokemonFamilyIDs;"
-  >
+       *ngFor="let list of pokemonFamily; ">
     <div class="pokemon-grid"
-         *ngFor="let id of ids; let isNotLast = last;"
+         *ngFor="let pokemon of list | orderBy:'pokemon.id'; let isNotLast = last;"
     >
-      <div class="box" style="background-color: aqua;">
-        <h3 id="idOfPokemon">ID: {{id}}</h3>
-        <h3>Another Option</h3>
+      <div
+        class="box" style="background-color: aqua;">
+        <h3 id="idOfPokemon">ID: {{pokemon.id}}</h3>
+        <h3 id="nameOfPokemon">Name: {{pokemon.name}}</h3>
       </div>
-      <div *ngIf="!isNotLast" style="padding-top:20%; padding-bottom:10%; text-align:center; justify-content:center;">
+      <div *ngIf="!isNotLast"
+           style="padding-top:20%; padding-bottom:10%; text-align:center; justify-content:center;">
         <img
-             style="width:25px; height:25px;"
-             src="./assets/images/pokeball1.jpg"
+          style="width:25px; height:25px;"
+          src="./assets/images/pokeball1.jpg"
         >
       </div>
+
     </div>
   </div>
 </div>
+
+
+<!--
+
+<div class="box"
+       *ngFor="let idList of pokemonFamilyIDs; let i=index;">
+    <div class="pokemon-grid"
+         *ngFor="let id of idList; let isNotLast = last;"
+    >
+      <div
+        class="box" style="background-color: aqua;">
+        <h3 id="idOfPokemon">ID: {{id}}</h3>
+        <h3 id="nameOfPokemon">Name: {{id}}</h3>
+      </div>
+      <div *ngIf="!isNotLast"
+           style="padding-top:20%; padding-bottom:10%; text-align:center; justify-content:center;">
+        <img
+          style="width:25px; height:25px;"
+          src="./assets/images/pokeball1.jpg"
+        >
+      </div>
+
+    </div>
+  </div>
+
+
+
+<div *ngFor="let pokemon of pokemonList.sort();">
+    10195 - venusaur-gmax
+    {{pokemon.id}} - {{pokemon.name}}
+</div>
+
+-->
+
