--- a/src/app/evolutions/evolutions.component.html
+++ b/src/app/evolutions/evolutions.component.html
@@ -1,4 +1,3 @@
-<h1>evolutions page in the works!</h1>
 <a routerLink="/"> <!-- goToPreviousPage(); -->
   <img alt="Go to Home"
        src="./assets/images/arrow-back.jpg"
@@ -12,10 +11,16 @@
     <div class="pokemon-grid"
          *ngFor="let pokemon of list | sort:'{{pokemon.id}}'; let isNotLast = last;"
     >
-      <div
-        class="box" style="background-color: aqua;">
+      <div [ngStyle]="{'background-color':changeColor(pokemon.color)}"
+        class="box"> <!-- style="background-color: aqua;-->
         <h3 id="idOfPokemon">ID: {{pokemon.id}}</h3>
-        <h3 id="nameOfPokemon">Name: {{pokemon.name}}</h3>
+        <h3 id="nameOfPokemon">Name: {{pokemon.name | titlecase}}</h3>
+        <img style="width:100px; height:100px;"
+          src="{{pokemon.photo}}" alt="{{pokemon.photo}}-default">
+        <h3 id="heightOfPokemon">Height: {{pokemon.height}}</h3>
+        <h3 id="weightOfPokemon">Weight: {{pokemon.weight}}</h3>
+        <h3 id="colorOfPokemon">Color: {{pokemon.color | titlecase}}</h3>
+        <h3 id="typeOfPokemon">Type: {{pokemon.type}}</h3>
       </div>
       <div *ngIf="!isNotLast"
            style="padding-top:20%; padding-bottom:10%; text-align:center; justify-content:center;">
