--- a/src/app/evolutions/evolutions.component.html
+++ b/src/app/evolutions/evolutions.component.html
@@ -1,62 +1,25 @@
+<h2>Evolutions</h2>
 <div style="display:inline-flex; justify-content: center; width:100%; height:100%; ">
   <div class="box"
        *ngFor="let list of pokemonFamily;">
     <div class="pokemon-grid"
-         *ngFor="let pokemon of list | sort:'{{pokemon.id}}'; let isNotLast = last;"
-    >
+         *ngFor="let pokemon of list | sort:'{{pokemon.id}}'; let isNotLast = last;">
       <div [ngStyle]="{'background-color':changeColor(pokemon.color)}"
         class="box"> <!-- style="background-color: aqua;-->
         <h3 id="idOfPokemon">ID: {{pokemon.id}}</h3>
         <h3 id="nameOfPokemon">Name: {{pokemon.name | titlecase}}</h3>
         <img style="width:100px; height:100px;"
-          src="{{pokemon.photo}}" alt="{{pokemon.photo}}-default">
+             src="{{pokemon.photo}}" alt="{{pokemon.photo}}-default">
         <h3 id="heightOfPokemon">Height: {{pokemon.height}}</h3>
         <h3 id="weightOfPokemon">Weight: {{pokemon.weight}}</h3>
         <h3 id="colorOfPokemon">Color: {{pokemon.color | titlecase}}</h3>
         <h3 id="typeOfPokemon">Type: {{pokemon.type}}</h3>
       </div>
-      <div *ngIf="!isNotLast"
-           style="padding-top:20%; padding-bottom:10%; text-align:center; justify-content:center;">
-        <img
-          style="width:25px; height:25px;"
-          src="./assets/images/pokeball1.jpg"
-        >
+      <div style="padding-top:20%; padding-bottom:10%; text-align:center; justify-content:center;"
+           *ngIf="!isNotLast">
+        <img style="width:25px; height:25px;"
+             src="./assets/images/pokeball1.jpg">
       </div>
-
     </div>
   </div>
 </div>
-
-
-<!--
-
-<div class="box"
-       *ngFor="let idList of pokemonFamilyIDs; let i=index;">
-    <div class="pokemon-grid"
-         *ngFor="let id of idList; let isNotLast = last;"
-    >
-      <div
-        class="box" style="background-color: aqua;">
-        <h3 id="idOfPokemon">ID: {{id}}</h3>
-        <h3 id="nameOfPokemon">Name: {{id}}</h3>
-      </div>
-      <div *ngIf="!isNotLast"
-           style="padding-top:20%; padding-bottom:10%; text-align:center; justify-content:center;">
-        <img
-          style="width:25px; height:25px;"
-          src="./assets/images/pokeball1.jpg"
-        >
-      </div>
-
-    </div>
-  </div>
-
-
-
-<div *ngFor="let pokemon of pokemonList.sort();">
-    10195 - venusaur-gmax
-    {{pokemon.id}} - {{pokemon.name}}
-</div>
-
--->
-
