--- a/src/app/evolutions/evolutions.component.html
+++ b/src/app/evolutions/evolutions.component.html
@@ -1,9 +1,14 @@
 <h2>Evolutions</h2>
+<div class="pokemon-grid box"
+  *ngFor="let stage of stages;"
+  style="display:inline-flex;justify-content:center;text-align-all:center;width:300px;height:10px;">
+  <h3>Stage {{stage}}</h3>
+</div>
 <div style="display:inline-flex; justify-content: center; width:100%; height:100%; ">
-  <div class="box"
+  <div class="box" style="overflow-y: scroll; height:410px;"
        *ngFor="let list of pokemonFamily;">
     <div class="pokemon-grid"
-         *ngFor="let pokemon of list | sort:'{{pokemon.id}}'; let isNotLast = last;">
+         *ngFor="let pokemon of list | sort:'{{pokemon.id}}'; let isNotLast = last; ">
       <div [ngStyle]="{'background-color':changeColor(pokemon.color)}"
         class="box"> <!-- style="background-color: aqua;-->
         <h3 id="idOfPokemon">ID: {{pokemon.id}}</h3>
