--- a/src/app/evolutions/evolutions.component.html
+++ b/src/app/evolutions/evolutions.component.html
@@ -1,30 +1,35 @@
 <h2>Evolutions</h2>
-<div class="pokemon-grid box"
-  *ngFor="let stage of stages;"
-  style="display:inline-flex;justify-content:center;text-align-all:center;width:300px;height:10px;">
+<div id="stagesHeader"
+     style="display:inline-flex;justify-content:center;text-align-all:center;width:300px;height:10px;"
+     class="pokemon-grid box"
+  *ngFor="let stage of stages;">
   <h2>Stage {{stage}}</h2>
 </div>
-<div style="display:inline-flex; justify-content: center; width:100%; height:45%; ">
+<div id="evolutions" style="display:inline-flex; justify-content: center; width:100%; height:45%;">
   <div class="box" style="overflow-y: scroll; height:410px;"
        *ngFor="let list of pokemonFamily;">
-    <div class="pokemon-grid"
-         *ngFor="let pokemon of list | sort:'{{pokemon.id}}'; let isNotLast = last; ">
-      <div [ngStyle]="{'background-color':changeColor(pokemon.color)}"
-        class="box"> <!-- style="background-color: aqua;-->
-        <h3 id="idOfPokemon">ID: {{pokemon.id}}</h3>
-        <h3 id="nameOfPokemon">Name: {{pokemon.name | titlecase}}</h3>
-        <img style="width:100px; height:100px;"
-             src="{{pokemon.photo}}" alt="{{pokemon.photo}}-default">
-        <h3 id="heightOfPokemon">Height: {{pokemon.height}}</h3>
-        <h3 id="weightOfPokemon">Weight: {{pokemon.weight}}</h3>
-        <h3 id="colorOfPokemon">Color: {{pokemon.color | titlecase}}</h3>
-        <h3 id="typeOfPokemon">Type: {{pokemon.type}}</h3>
-      </div>
-      <div style="padding-top:20%; padding-bottom:10%; text-align:center; justify-content:center;"
-           *ngIf="!isNotLast">
-        <img style="width:25px; height:25px;"
-             src="./assets/images/pokeball1.jpg">
-      </div>
-    </div>
+
+        <div class="pokemon-grid"
+             *ngFor="let pokemon of list | sort:'{{pokemon.id}}'; let isNotLast = last; ">
+          <nav>
+            <a routerLink="/pokedex/?pokemonID={{pokemon.id}}" style="text-decoration: none; color: black;">
+              <div [ngStyle]="{'background-color':changeColor(pokemon.color)}" class="box">
+                <h3 id="idOfPokemon">ID: {{pokemon.id}}</h3>
+                <h3 id="nameOfPokemon">Name: {{pokemon.name | titlecase}}</h3>
+                <img style="width:100px; height:100px;"
+                     src="{{pokemon.photo}}" alt="{{pokemon.photo}}-default">
+                <h3 id="heightOfPokemon">Height: {{pokemon.height}}</h3>
+                <h3 id="weightOfPokemon">Weight: {{pokemon.weight}}</h3>
+                <h3 id="colorOfPokemon">Color: {{pokemon.color | titlecase}}</h3>
+                <h3 id="typeOfPokemon">Type: {{pokemon.type}}</h3>
+              </div>
+            </a>
+          </nav>
+          <div style="padding-top:20%; padding-bottom:10%; text-align:center; justify-content:center;"
+               *ngIf="!isNotLast">
+            <img style="width:25px; height:25px;"
+                 src="./assets/images/pokeball1.jpg">
+          </div>
+        </div>
   </div>
 </div>
