stages are visibily scrollable

--- a/src/app/evolutions/evolutions.component.css
+++ b/src/app/evolutions/evolutions.component.css
@@ -12,3 +12,13 @@
   box-shadow: 1px 2px 5px rgba(0,0,0,0.3);
 }
 
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+}
