evolutions now shows after searching

--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -82,4 +82,6 @@
   </div>
 </div>
 <!-- Display evolutions here -->
-<app-evolutions></app-evolutions>
+<app-evolutions
+  [pokemonID]="pokemonID"
+></app-evolutions>
