--- a/src/app/evolutions/evolutions.component.html
+++ b/src/app/evolutions/evolutions.component.html
@@ -6,7 +6,7 @@
   <h2>Stage {{stage}}</h2>
 </div>
 <div id="evolutions" style="display:inline-flex; justify-content: center; width:100%; height:45%;">
-  <div class="box" style="overflow-y:scroll; height:410px;"
+  <div class="box" style="overflow-y:scroll; height:460px;"
        *ngFor="let list of pokemonFamily;">
 
         <div class="pokemon-grid"
@@ -22,6 +22,7 @@
                 <h3 id="weightOfPokemon">Weight: {{pokemon.weight}}</h3>
                 <h3 id="colorOfPokemon">Color: {{pokemon.color | titlecase}}</h3>
                 <h3 id="typeOfPokemon">Type: {{pokemon.type}}</h3>
+                <h3 id="levelOfPokemon">Evolves At Lvl: {{pokemon.evolutionLevel}}</h3>
               </div>
             </a>
           </nav>
