--- a/src/app/evolutions/evolutions.component.html
+++ b/src/app/evolutions/evolutions.component.html
@@ -22,7 +22,17 @@
                 <h3 id="weightOfPokemon">Weight: {{pokemon.weight}}</h3>
                 <h3 id="colorOfPokemon">Color: {{pokemon.color | titlecase}}</h3>
                 <h3 id="typeOfPokemon">Type: {{pokemon.type}}</h3>
-                <h3 id="levelOfPokemon">Evolves At Lvl: {{pokemon.evolutionLevel}}</h3>
+                <div *ngIf="pokemon.evolves && !pokemon.evolvesWithItem">
+                  <h3 id="levelOfPokemon1">Evolves At Lvl: {{pokemon.evolutionLevel}}</h3>
+                </div>
+                <div *ngIf="pokemon.evolves && pokemon.evolvesWithItem">
+                  <h3 id="levelOfPokemon2">Evolves At Lvl: {{pokemon.evolutionLevel}}</h3>
+                  <br>
+                  <h3 id="itemToEvolve">Evolves with: {{pokemon.itemUsedToEvolve}}</h3>
+                </div>
+                <div *ngIf="!pokemon.evolves">
+                  <h3 id="levelOfPokemon">Final Form</h3>
+                </div>
               </div>
             </a>
           </nav>
