updates to displaying levels

--- a/src/app/evolutions/evolutions.component.html
+++ b/src/app/evolutions/evolutions.component.html
@@ -22,17 +22,20 @@
                 <h3 id="weightOfPokemon">Weight: {{pokemon.weight}}</h3>
                 <h3 id="colorOfPokemon">Color: {{pokemon.color | titlecase}}</h3>
                 <h3 id="typeOfPokemon">Type: {{pokemon.type}}</h3>
-                <div *ngIf="pokemon.evolves">
+                <div *ngIf="pokemon.evolves && pokemon.evolutionLevel != null">
                   <h3 id="levelOfPokemon1">Evolves At Lvl: {{pokemon.evolutionLevel}}</h3>
                 </div>
-                <div *ngIf="pokemon.evolvesWithItem">
-                  <h3 id="itemToEvolve2">Evolves with: {{pokemon.itemUsedToEvolve | titlecase}}</h3>
+                <div *ngIf="pokemon.doesEvolvesWithItem">
+                  <h3 id="itemToEvolve">Evolves with: {{pokemon.evolvesByUsingItem | titlecase}}</h3>
+                </div>
+                <div *ngIf="pokemon.doesEvolveWithHeldItem">
+                  <h3 id="heldItemToEvolve">Evolves with: {{pokemon.held_item | titlecase}}</h3>
                 </div>
                 <div *ngIf="pokemon.evolvesByHappinessAttribute" style="display:inline-flex;">
                   <h3>Evolves w/ Happiness: </h3>
                   <h3 id="attrToEvolve">{{pokemon.happinessAttribute}}</h3>
                 </div>
-                <div *ngIf="!pokemon.evolves && !pokemon.evolvesWithItem && !pokemon.evolvesByAttribute && !pokemon.isBaby">
+                <div *ngIf="!pokemon.evolves">
                   <h3 id="levelOfPokemon">Final Form</h3>
                 </div>
               </div>
